sites/all/themes/pluto/css/pluto.css
/* ... */
.overlay-item:hover > .o-hover i.fa-2x:hover,
.overlay-item a:hover > .o-hover i.fa-2x:hover {
  color: #ffffff;
  background: none;
}
.post-img {
    overflow: hidden;
    position: relative;
}

/** mobile devices, tablets */
@media (max-width: 992px) {
  .google-map-layer form{
    position: relative;
  }
  .content-layer .placeOver{
    padding-top: 0;
  }

}
@media (max-width: 767px) {
  .btn-lg{
    padding: 3px 5px;
  }
  .google-map-layer form{
    position: relative;
  }
  .content-layer .placeOver{
    padding-top: 0;
  }
  #main-navigation ul.menu:before,#main-navigation ul.menu:after{
    content: " ";
    display: table;
  }
  #main-navigation ul.menu{
    display: block;
    width: 100%;
    padding: 28px 0;
    margin: 0;
  }
  #main-navigation ul.menu li{
    margin:0;
    display: block;
    width: 100%;
    padding: 0 !important;
  }
  .navbar-default #main-navigation .nav > li > a{
    padding: 10px 15px;
  }
  #main-navigation ul.menu > li > ul{
    border-top-left-radius: 0;
    border-top-right-radius: 0;
    margin-top: 0;
    display: block !important;
    float: none !important;
    margin-top: 10px !important;
    position: relative;
    width: 100% !important;
    background-clip: padding-box;
    font-size: 14px;
    top: 10px !important; 
    margin-left: 0 !important;
    left: 0 !important;
    right: 0 !important;
  }
  #main-navigation ul.menu > li:last-child > ul{
    right: 0 !important;
  }
  #main-navigation ul.menu > li > ul a{
    background: none repeat scroll 0 0 #2A272E;
    border-top: 1px solid #353239;
    color: #FFFFFF;
    display: block;
    font-size: 14px;
    line-height: 15px;
    padding: 17px 20px;
  }
  #main-navigation ul.menu > li > ul > li > ul{
    position: relative;
    left: 0 !important;
    right: 0 !important;
    display: block !important;
    top: 0 !important;
  }
  #main-navigation ul.menu > li:last-child > ul > li > ul{
    left: 0 !important;
  }
  #main-navigation ul.menu > li > ul > li > ul > li > a{
    padding-left: 30px;
  }
  #main-navigation ul.menu > li > a{
    margin-top: 10px;
  }
  #main-navigation ul.menu > li > ul > li > ul{
    width: 100% !important;
  }
  .region-footer-right .block-simplenews{
    display: block;
  }
  .region-footer-right .block-simplenews h2, .region-footer-right .block-simplenews .content{
    display: block;
    vertical-align: middle;
  }
  .region-footer-right .form-item-mail{
    margin-left: 0;
  }
  .region-footer-right .block-simplenews{
    text-align: center;
  }
  .region-footer-right .table-cell{
    display: inline-block;
  }
  .region-footer-right .table-row{
    display: block;
  }
}

@media (min-width: 1300px) {
  #views-bs-isotope-recent_work_slideshow-block_2 .col-lg-3{
    width: 20%;
  }
  .view-recent-work-slideshow .flex-direction-nav a, #recent-work .flex-direction-nav a{
    top: 50%;
  }
  .view-recent-work-slideshow .flex-direction-nav .flex-prev, #recent-work .flex-direction-nav .flex-prev{
    left: -55px;
  }
  .view-recent-work-slideshow .flex-direction-nav .flex-prev, #recent-work .flex-direction-nav .flex-next{
    right: -55px;
    left: auto;
  }
}
@media only screen and (max-width: 1024px) {
     .page-builder-row-section.page-builder-row-parallax{
         background-attachment: scroll !important;
         background-position: center top !important;
    }
}

